Fixed a bug where certain quest objective progress wasn't being correctly loaded.